otel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  namespace: otel-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.fidevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-frontend
            port:
              number: 8080
  - host: grafana.fidevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-grafana
            port:
              number: 3000
  - host: jaeger.fidevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-jaeger-query
            port:
              number: 16686
  - host: prometheus.fidevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-prometheus-server
            port:
              number: 9090
  - host: otelcollector.fidevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-otelcol
            port:
              number: 8888
